# gpt-diffy

./: LICENSE  pyproject.toml
gpt_diffy/: cli.py
gpt_diffy/core/: chatgpt.py  git_diff.py
